Closed Bug 97835 Opened 24 years ago Closed 24 years ago

We incorrectly linkify words with '@' characters

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: mscott, Assigned: mscott)

References

Details

Attachments

(1 file)

Try sending yourself a message with a word that contains an @ sign like: "hey, let's meet @8pm tonight." When you view the message in mozilla, we turn the @8pm into a mailto url. Oops!!! We should only linkify if we see a '.' in the same word after the @ sign. That's not a perfect solution but it should reduce the number of false positives for mailto url detection. i.e. mscott@netscape.com would get linkified because a period follows the @. but @8pm wouldn't be linkified.
Attached patch the fixSplinter Review
inString.FindChar('.', pos) > 0 try inString.FindChar('.', pos) != kNotFound otherwise, r/sr=sspitzer
I did that. thanks for the suggestion Seth.
Attachment #47847 - Flags: superreview+
Sorry for the spam, but I was wondering, should this also check for a non-whitespace character before the @ character? Or is that already done somewhere?
that's already done somewhere else. i shouldn't have typed @8pm as my test. Think of i'll meet u@8pm
Target Milestone: --- → mozilla0.9.4
r=varada
Attachment #47847 - Flags: review+
Whats about something@. and something@.some ?
OS: Windows 2000 → All
Hardware: PC → All
QA Contact: esther → laurel
The patch should probably also check that there is no whitespace after the period. For example: i'll meet u@8pm. later!
But : Please notify nobody@mozilla.org. The last . should be stripped away.
Attachment #47847 - Flags: approval+
Comment on attachment 47847 [details] [diff] [review] the fix a=asa on behalf of drivers.
fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
OK using sept 04 commercial trunk builds: win98, linux rh6.2 and mac OS 9.0
Status: RESOLVED → VERIFIED
eh, mscott, that bug is filed already since long time, and you own it. Note that fixing this bug will make linking internal email addresses (like <ben@myhost>) impossible. > Whats about something@. and something@.some That should be handled by the network component, because <mailto:something@.> is not a valid URL (and we only link to valid URLs).
*** Bug 37215 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: