Bug #97835 --> don't linkify words with @ signs in them unless they have a '.' somewhere after the space. r=varada sr=sspitzer a=asa